--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "@types/i18n-js": "^3.0.3",
     "@types/react-redux": "^7.1.9",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
