--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^15.3.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
