--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'PixWalletApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'PixWalletAppTests' do
     inherit! :complete
     # Pods for testing
