--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/clipboard": "^1.5.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "@types/i18n-js": "^3.0.3",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.9",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
@@ -26,9 +28,12 @@
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-localize": "^1.4.1",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
