--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/clipboard": "^1.5.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.4",
