--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "graphql": "^15.3.0",
     "i18n-js": "^3.7.1",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
