--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.9.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
+    "formik": "^2.2.1",
     "graphql": "^15.3.0",
     "i18n-js": "^3.7.1",
     "lottie-react-native": "^3.5.0",
@@ -37,7 +38,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -49,6 +51,7 @@
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "16.9.2",
+    "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^24.9.0",
