--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^2.11.0",
     "react-native-slide-charts": "^1.0.4",
     "react-native-svg": "^12.1.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
