Exchange summary first design and add Fontisto font

--- a/ios/PixWalletApp/Info.plist
+++ b/ios/PixWalletApp/Info.plist
@@ -57,6 +57,7 @@
 	<array>
 		<string>Ionicons.ttf</string>
 		<string>MaterialIcons.ttf</string>
+		<string>Fontisto.ttf</string>
 	</array>
 </dict>
 </plist>
