--- a/ios/PixWalletApp/Info.plist
+++ b/ios/PixWalletApp/Info.plist
@@ -58,6 +58,7 @@
 		<string>Ionicons.ttf</string>
 		<string>MaterialIcons.ttf</string>
 		<string>Fontisto.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
 	</array>
 </dict>
 </plist>
