add swipeup icon, add icon and fix unique index in activity

--- a/ios/PixWalletApp/Info.plist
+++ b/ios/PixWalletApp/Info.plist
@@ -59,6 +59,7 @@
 		<string>MaterialIcons.ttf</string>
 		<string>Fontisto.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
+		<string>FontAwesome.ttf</string>
 	</array>
 </dict>
 </plist>
