Add build configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('UPLOAD_STORE_FILE')) {
+              storeFile file(UPLOAD_STORE_FILE)
+              storePassword UPLOAD_STORE_PASSWORD
+              keyAlias UPLOAD_KEY_ALIAS
+              keyPassword UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -162,6 +170,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
