--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+UPLOAD_STORE_FILE=pix-wallet-app.keystore
+UPLOAD_KEY_ALIAS=pix-wallet-app
+UPLOAD_STORE_PASSWORD=
+UPLOAD_KEY_PASSWORD=
