--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,11 +130,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.pixwalletapp"
+        applicationId "com.thecodeworkers.pixwalletapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.0"
     }
     splits {
         abi {
